--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,10 @@ build/Release
 
 # Dependency directories
 node_modules/
+/node_modules
 jspm_packages/
+/.pnp
+.pnp.js
 
 # TypeScript v1 declaration files
 typings/
@@ -102,3 +105,16 @@ dist
 
 # TernJS port file
 .tern-port
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
